# python-clean-code-club

./: .gitignore  README.md
antlr4-for-python/: README.md
distributed-computing/celery-serve-embeddings/: README.md  docker-compose.yml  pyproject.toml
distributed-computing/celery-serve-embeddings/app/: __init__.py  main.py
distributed-computing/celery-serve-embeddings/app/internal/: __init__.py  worker.py
distributed-computing/celery-serve-embeddings/app/router/: __init__.py  embed.py
distributed-computing/celery-serve-embeddings/app/schema/: request.py
fastAPI-for-data-science/: README.md  pyproject.toml
fastAPI-for-data-science/01_api-server/: README.md  docker-compose.yml  pyproject.toml
fastAPI-for-data-science/01_api-server/app/dto/: comment.py
fastAPI-for-data-science/01_api-server/app/internal/: database.py
fastAPI-for-data-science/01_api-server/app/repository/: post.py
fastAPI-for-data-science/01_api-server/app/routers/: temparature.py
fastAPI-for-data-science/01_api-server/tests/: test_post.py
fastAPI-for-data-science/02_realtime-server/: README.md
fastAPI-for-data-science/02_realtime-server/app/: index.html  main.py
fastAPI-for-data-science/03_inference-server/: Dockerfile  README.md  pyproject.toml
fastAPI-for-data-science/03_inference-server/app/: main.py
fastAPI-for-data-science/03_inference-server/app/dto/: iris.py
fastAPI-for-data-science/03_inference-server/app/repository/: model.py
fastAPI-for-data-science/03_inference-server/app/router/: iris.py
fastAPI-for-data-science/03_inference-server/app/service/: prediction.py
fastAPI-for-data-science/03_inference-server/k8s/: iris-deployment.yaml
fastAPI-for-data-science/03_inference-server/models/: iris_model_latest.onnx  iris_model_latest.pkl
fastAPI-for-data-science/03_inference-server/scripts/: train.py
fastAPI-for-data-science/03_inference-server/tests/: test_iris.py
fastAPI-for-data-science/04_observability/: README.md  docker-compose.yml  grafana-dashboard.json  prometheus.yml  pyproject.toml
fastAPI-for-data-science/04_observability/app/: main.py
fastAPI-for-data-science/04_observability/app/service/: prediction.py
fastAPI-for-data-science/04_observability/scripts/: simulate_requests.py
fastAPI-for-data-science/04_observability/tests/: test_iris.py
fastAPI-for-data-science/api-server/app/models/: comment.py
fastAPI-for-data-science/api-server/app/routers/: http.py
fastAPI-for-data-science/app/: dependencies.py  main.py
fastAPI-for-data-science/app/auth/: http.py
fastAPI-for-data-science/app/dto/: post.py  temperature.py
fastAPI-for-data-science/app/internal/: database.py
fastAPI-for-data-science/app/models/: comment.py  post.py  temperature.py
fastAPI-for-data-science/app/repository/: post.py
fastAPI-for-data-science/app/routers/: http.py  post.py  temparature.py
fastAPI-for-data-science/app/tests/: conftest.py  test_post.py
fastAPI-for-data-science/basic-backend/: Dockerfile  README.md
fastAPI-for-data-science/basic-backend/app/dto/: temperature.py
fastAPI-for-data-science/realtime-server/: README.md  pyproject.toml
fastAPI-for-data-science/realtime-server/app/: index.html  main.py  script.js
functional-python-programming/: 1_01_imperative_programming.py  1_01_imperative_vs_functional_sum.py  2_01_isprime_tail_call.py
functional-python-prorgramming/: 0_generator.py  1_02_newton_raphson.py  (+2 more)
maturin-in-action/hello_world/crates/greet/: Cargo.toml  pyproject.toml
torch-on-fire/01_iris_says_hello_torch/: README.md  main.py  pyproject.toml
torch-on-fire/01_iris_says_hello_torch/artifacts/: model.pt
torch-on-fire/01_iris_says_hello_torch/src/config/: config.py
torch-on-fire/01_iris_says_hello_torch/src/data/: dataset.py
torch-on-fire/01_iris_says_hello_torch/src/evaluation/: metrics.py
torch-on-fire/01_iris_says_hello_torch/src/inference/: app.py  predict.py  repository.py
torch-on-fire/01_iris_says_hello_torch/src/models/: mlp.py
torch-on-fire/01_iris_says_hello_torch/src/train/: trainer.py
torch-on-fire/01_iris_says_hello_torch/tests/: test_model.py
(+51 files in other folders)
