[project]
name = "celery-serve-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.2",
    "fastapi[standard]>=0.135.1",
    "flower>=2.0.1",
    "redis>=7.2.1",
    "ruff>=0.15.4",
    "sentence-transformers>=5.2.3",
]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
