[project]
name = "03-inference-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.134.0",
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "ruff>=0.15.4",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
