[project]
name = "realtime-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "broadcaster[redis]>=0.3.1",
    "fastapi[standard]>=0.129.2",
    "ruff>=0.15.2",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
