[project]
name = "01-iris-says-hello-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
train = "main:main"
